--- a/css/info_tttttt.css
+++ b/css/info_tttttt.css
@@ -3,11 +3,11 @@
     
 }
 
-/* body{ /* 현재수정중 
+body{ /* 현재수정중 */
     display: flex;
     align-items: center;
     flex-direction: column;
-} */
+}
 
 /* 메인배너이미지 시작*/
 .main-image {
@@ -93,7 +93,7 @@
 }
 
 
-.infographic_container2{ /* 현재 수정중 */ /* 요기도고침3번째임 5번째는 reset.css랑 html aside랑main그것고친것.*/
+.infographic_container2{ /* 현재 수정중 */ /* 요기도고침3번째임 4번째는 reset.css랑 html aside랑main그것고친것.*/
     grid-area: main;
     display: flex;
     flex-direction: column;
@@ -230,14 +230,12 @@
     display: inline;
     margin-right: 15px;
     font-size: 12px;
-    color: #999999;
 }
 
 #box_span2{
     display: inline;
     margin-left: 15px;
     font-size: 12px;
-    color: #999999;
 
 }
 
@@ -246,7 +244,6 @@
     display: block;
     margin-left: 93px;
     font-size: 12px;
-    color: #999999;
 
 }
 
