--- a/css/main.css
+++ b/css/main.css
@@ -146,7 +146,7 @@
             grid-column: 1 / 2;
             grid-row: 2 / 3;
             margin-top : 20px;
-            padding:10px;
+            padding:15px;
         }
         .hide-somthing {
             background-color : transparent;
@@ -164,24 +164,50 @@
             border-radius: 50%;
             cursor : pointer;
         }
+
+
+
         .mbirightgrid-under-box {
             display: flex;
             justify-content: space-around;
             align-items: center;
-            width: 150px;
+            width: 140px;
             height: 40px;
             background-color: rgba(220, 230, 245, 0.9);
             border-radius: 25px;
         }
         
         .set-radio {
-            display: inline-block;
-            width: 10px;
-            height: 10px;
-            background-color: rgba(220, 230, 245, 0.9);
+            appearance: none;
+            width: 8px;
+            height: 8px;
+            background-color: #c1cfe4;
             border-radius: 50%;
             margin: 0 5px;
             cursor: pointer;
+        }
+        
+        .set-radio:checked {
+           background-color: rgb(0, 50, 155);
+           border-color: blue; 
+        }
+
+        .mbirightgrid-under-box label {
+            background-color: transparent !important;
+        }
+        .start-button-set {
+            appearance: none;
+            width: 8px;
+            height: 8px;
+            background-color: #c1cfe4;
+            border-radius: 50%;
+            margin: 0 5px;
+            cursor: pointer;
+        }
+        
+        
+        .mbirightgrid-under-button label {
+            background-color: transparent !important;
         }
 
 
@@ -378,6 +404,24 @@
             background-color: rgb(0, 40, 125);
         }
 
+
+        /* 토글 버튼 스타일 */
+        .toggle-button {
+            position: relative;
+            display: inline-block;
+            width: 50px;
+            height: 50px;
+            cursor: pointer;
+            background-color: rgb(0, 50, 155);
+        }
+   
+        
+        /* 체크박스 숨기기 */
+        .toggle-button input[type="checkbox"] {
+            display: none;
+        }
+        
+  
         /* 1번 섹션 끝 */
 
 
@@ -481,10 +525,11 @@
             box-shadow:  4px 4px 8px rgba(0, 0, 0, 0.2);
             font-size: 23px;
             
+            
         }
         .arrowset {
-            width : 80%;
-            height : 80%;
+            width : 50%;
+            height : 50%;
             background-color: transparent;
             
         }
