--- a/css/footer.css
+++ b/css/footer.css
@@ -14,7 +14,7 @@
 }
 
 .footer-logo img {
-    width: 300px; /* 이미지 크기를 3배로 증가 */
+    width: 200px;
     height: auto;
 }
 
@@ -22,7 +22,7 @@
     text-align: left;
     padding-left: 30px; /* 왼쪽 패딩을 3배로 증가 */
     padding-bottom: 30px; /* 아래 패딩을 3배로 증가 */
-    font-size: 1.2rem; /* 폰트 크기를 3배로 증가 */
+    font-size: 1rem; /* 폰트 크기를 3배로 증가 */
     color: #a6a6a6;
 }
 
