--- a/components/header.html
+++ b/components/header.html
@@ -17,7 +17,7 @@
                 <li>이용안내</li>
                 <li><a href="../pages/data.html">데이터</a></li>
                 <li class="dropdown">
-                    <a href="../pages/infographic.html">인포그래픽</a>
+                    <a href="../pages/graphics/general.html">인포그래픽</a>
                     <ul class="submenu">
                         <li>차트인포그래픽</li>
                         <li>영상인포그래픽</li>
